--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Numora - Ton compagnon numérique de numérologie. Découvre la puissance cachée des nombres et révèle ton chemin de vie." />
-    <title>🌌 Numora - Ton âme a un code, les nombres l'éclairent</title>
+    <title>Numora - Les nombres éclairent ton parcours</title>
   </head>
   <body>
     <div id="root"></div>
